Fixing desktop spacing bug

--- a/assets/static/beeware.css
+++ b/assets/static/beeware.css
@@ -50,9 +50,6 @@
 
 /* Small devices (landscape phones, less than 48em) */
 @media (max-width: 768px) {
-  .content {
-    margin-bottom: 5em;
-  }
   .display-1 {
     font-size: 400%;
   }
@@ -79,8 +76,7 @@
   }
 
   .content {
-    margin-top: 3em;
-    margin-bottom: 7em;
+    margin-bottom: 7em !important; 
   }
 
   .display-1 {
@@ -144,6 +140,11 @@
 /*----------------------------------------------------
   Main styles
  --------------------------------------------------- */
+
+.content {
+  margin-top: 3em;
+  margin-bottom: 5em;
+}
 
 h1 {
   font-family: 'Cutive', serif;
